# bible-gadgets

./: README.md  bible_structure.json  debug_page.html  pyproject.toml  readings.json  scarper.py  scrape_bible.py  scraper.ipynb  scraper.py  test_hebrew.py  thing.py  verse_scraper.py
bible/genesis/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+10 more)
bible/philemon/: 1.json
bible_data/: philemon.json
bible_test/philemon/: 1.json
src/bible_scraper/: __init__.py  __main__.py  cli.py  models.py  scraper.py
