[project]
name = "bible-scraper"
version = "0.1.0"
description = "Scrape Bible verses from BibleHub with translations, original languages (Hebrew/Greek), and cross-references"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
]

[project.scripts]
bible-scraper = "bible_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
